--- a/css/style.css
+++ b/css/style.css
@@ -1350,3 +1350,24 @@ h1, h2, .descripcio-linies {
     color: #000;
     box-shadow: 0 0 15px #0f0;
 }
+.projecte {
+    position: relative; /* Base para el clic */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 20px;
+    border: 1px solid rgba(0, 255, 0, 0.3);
+    background: rgba(0, 0, 0, 0.5);
+    transition: all 0.3s ease;
+}
+
+.enllac-principal::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100; /* Asegura que el clic esté sobre todo */
+}
